--- a/deploy/prod/env.template
+++ b/deploy/prod/env.template
@@ -2,7 +2,7 @@
 # コピーして .env として使用してください
 
 # GitHub Container Registry設定
-REGISTRY_URL=ghcr.io/YOUR_GITHUB_USERNAME/github-traffic-api-laravel
+REGISTRY_URL=ghcr.io/YOUR_GITHUB_USERNAME/github-analytics-laravel
 IMAGE_TAG=latest
 
 # タイムゾーン
@@ -18,7 +18,7 @@ MYSQL_ROOT_PASSWORD=your_secure_root_password_here
 REDIS_PASSWORD=your_redis_password_here
 
 # アプリケーション設定
-APP_NAME="GitHub Traffic API"
+APP_NAME="GitHub Analytics"
 APP_ENV=production
 APP_DEBUG=false
 APP_URL=https://your-domain.com
