feat: publicディレクトリのボリュームマウントとLivewireアセット公開を追加
Livewireの静的アセット（JavaScriptファイルなど）をappコンテナとwebコンテナで
共有できるように、publicディレクトリをボリュームとしてマウント。

変更内容:
- docker-compose.ymlの修正
  - app-publicボリュームを追加
  - appサービスにapp-public:/var/www/html/publicをマウント
  - webサービスにapp-public:/var/www/html/public:roをマウント（読み取り専用）
  - schedulerサービスのコマンドを--verboseオプション付きに変更
  - schedulerサービスのentrypointを空配列に設定（エントリーポイントスクリプトをスキップ）
- deploy.shの修正
  - Livewireアセットの公開ステップを追加（php artisan livewire:publish --force）
  - デプロイプロセスのコメント番号を更新

これにより、Livewireの静的アセットがappコンテナで生成され、
webコンテナからもアクセス可能になり、アセットの不整合が解消される。

--- a/deploy/prod/docker-compose.yml
+++ b/deploy/prod/docker-compose.yml
@@ -5,6 +5,8 @@ volumes:
     name: github-analytics_php-fpm-socket
   app-storage:
     name: github-analytics_app-storage
+  app-public:
+    name: github-analytics_app-public
   redis-data:
     name: github-analytics_redis
 
@@ -25,6 +27,7 @@ services:
     volumes:
       - php-fpm-socket:/var/run/php-fpm
       - app-storage:/var/www/html/storage
+      - app-public:/var/www/html/public
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "php -v >/dev/null 2>&1 || exit 1"]
@@ -48,6 +51,7 @@ services:
       - "80"
     volumes:
       - php-fpm-socket:/var/run/php-fpm
+      - app-public:/var/www/html/public:ro
     restart: unless-stopped
     healthcheck:
       test: ["CMD-SHELL", "wget -qO- http://localhost/ >/dev/null 2>&1 || exit 1"]
@@ -98,7 +102,8 @@ services:
   scheduler:
     container_name: github-analytics-scheduler
     image: ${REGISTRY_URL}/app:${IMAGE_TAG:-latest}
-    command: php artisan schedule:work
+    entrypoint: []
+    command: php artisan schedule:work --verbose
     environment:
       APP_ENV: production
       APP_DEBUG: "false"
