fix: schedulerコンテナをwww-dataユーザーで実行するように修正
schedulerコンテナにuser指定を追加し、www-dataユーザーで実行するように変更。
これにより、バックアップコマンドで作成されるファイルがroot所有者にならず、
正しくwww-data:www-dataの所有者で作成されるようになる。

--- a/deploy/prod/docker-compose.yml
+++ b/deploy/prod/docker-compose.yml
@@ -102,6 +102,7 @@ services:
   scheduler:
     container_name: github-analytics-scheduler
     image: ${REGISTRY_URL}/app:${IMAGE_TAG:-latest}
+    user: "www-data:www-data"
     entrypoint: []
     command: php artisan schedule:work --verbose
     environment:
