--- a/.github/workflows/mirror-to-public.yml
+++ b/.github/workflows/mirror-to-public.yml
@@ -53,6 +53,16 @@ jobs:
           このリポジトリは参照・学習目的で公開されています。  
           デプロイ手順や環境構築の詳細はドキュメントを参照してください。
 
+          ### プライベートリポジトリについて
+          この公開リポジトリは、メインで運用されている**プライベートリポジトリ**のミラーです。
+
+          **プライベートリポジトリで運用している理由：**
+          - **セキュリティ**: 環境変数（`.env`）、デプロイ設定、GitHub Actionsのシークレット情報を保護
+          - **本番環境の保護**: 実際のデプロイ先やサーバー情報などの機密情報を公開しない
+          - **ポートフォリオ展示**: コードの公開とセキュリティのバランスを取るため、公開用ミラーリポジトリを別途用意
+
+          メインのプライベートリポジトリでは、**GitHub Actions**と**Self-hosted Runner**を使用した自動デプロイが実装されています。`main`ブランチへのpushをトリガーに、Dockerイメージのビルド、GitHub Container Registryへのpush、本番サーバーでの自動デプロイが実行されます。この公開リポジトリでは、デプロイ設定や機密情報を除外した状態で同期されています。
+
           ## ライセンス
           MIT License
           EOF
